    <resources>
    <string name="app_name">♥ de la patrie</string>
    <string name="title_activity_main">♥ de la patrie</string>
        <string name="default_web_client_id" translatable="false">800476198838-6s6gff4unhf24o026qaqqeet91prurau.apps.googleusercontent.com</string>
    <string name="login">Connexion</string>
    z
    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Accèder</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <!-- Dialog -->
    <string name="dialog_msg">"Voulez-vous vraiment le supprimer ?"</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email : </string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnecter</string>
    <string name="info_no_email_found">Aucune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>

    <!-- MENTOR_CHAT ACTIVITY -->
    <string name="button_title_mentor_chat_activity">ENVOYER</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_image_chosen">Aucune image choisie&#8230;</string>

    <!-- FACEBOOK PURPOSE -->
<!--    <string name="title_activity_admin_profile">Wjda Food</string>-->
    <string name="title_activity_admin_profile">♥ de la patrie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">♥ de la patrie</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">A propos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="successoperation">L\'opération est effectuée avec succes</string>
    <string name="uploadButton">choisir une image à envoyer</string>
    <string name="title_activity_profile_client">♥ de la patrie</string>
    <string name="add_user">Ajouter</string>
    <string name="cancel">Annuler</string>
    <string name="add_user_fragment_title">Ajouter un utilisateur</string>
    <string name="modify_user">Modifier</string>
    <string name="error_user_not_activated">Cet utilisateur n\'est pas encore activé</string>
    <string name="order">Commander</string>
    <string name="order_response">Répondre</string>
    <string name="order_accepted">Commande acceptée</string>
    <string name="order_refused">Commande refusée</string>
    <string name="confirm">Confirmer</string>
    <string name="button_details">Détails</string>
    <string name="username">Nom d\'utilisateur: </string>
    <string name="amount">Quantité: </string>
    <string name="priceht">Prix HT: </string>
    <string name="priceTTC">Prix TTC: </string>
    <string name="urgent">Urgent: </string>
    <string name="description">Description: </string>
    <string name="product_name">Nom du produit: </string>
    <string name="order_state">Etat de la commande: </string>
    <string name="with_bill">Avec facture: </string>
    <string name="admin_email">Anasselghinoussi@gmail.com</string>
    <string name="admin_tel">0663038393</string>
        <string name="submit">Valider</string>
    </resources>
