<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.ProfileFragment">


    <!-- USER DATA CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_large_margin"
                android:gravity="center">

                <!-- FIREBASE IMAGE -->

                <!-- PROGRESS BAR -->
                <ProgressBar
                    android:id="@+id/profile_activity_progress_bar"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_margin="@dimen/default_large_margin"
                    android:visibility="visible" />

                <!-- PROFILE IMAGE -->
                <ImageView
                    android:id="@+id/profile_activity_imageview_profile"
                    app:srcCompat="@drawable/ic_anon_user_48dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


            <!-- PROFILE USERNAME -->
            <android.support.design.widget.TextInputEditText
                android:id="@+id/profile_activity_edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/text_input_username"
                android:textSize="@dimen/default_text_size" />

            <!-- PROFILE EMAIL CONTAINER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_email"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold" />

                <!-- PROFILE EMAIL -->
                <TextView
                    android:id="@+id/profile_activity_text_view_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/default_margin"
                    android:textSize="@dimen/default_text_size" />

            </LinearLayout>

            <!-- CHECKBOX IS USER MENTOR -->


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <!-- BUTTON UPDATE USERNAME -->
            <Button
                android:id="@+id/profile_activity_button_update"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/fui_idp_button_background_twitter"
                android:padding="@dimen/default_margin"
                android:text="@string/button_update_account"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

            <!-- BUTTON SIGN OUT -->

            <Button
                android:id="@+id/profile_activity_button_sign_out"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/button_radius_accent_color"
                android:padding="@dimen/default_margin"
                android:text="@string/button_sign_out_account"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

            <!-- BUTTON DELETE ACCOUNT -->
            <Button
                android:id="@+id/profile_activity_button_delete"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/button_radius_error_color"
                android:padding="@dimen/default_margin"
                android:text="@string/button_delete_account"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

        </LinearLayout>

    </LinearLayout>

    <!-- BUTTONS CONTAINER -->


</FrameLayout>